--- a/sem_4/www/lab4/package.json
+++ b/sem_4/www/lab4/package.json
@@ -9,6 +9,7 @@
     },
     "dependencies": {
         "bcryptjs": "^2.4.3",
+        "cookie-parser": "^1.4.7",
         "dotenv": "^16.5.0",
         "event-api": "file:",
         "eventdb": "file:",
