--- a/sem_4/www/lab5_6/event_app/pubspec.yaml
+++ b/sem_4/www/lab5_6/event_app/pubspec.yaml
@@ -1,4 +1,9 @@
 name: event_app
+description: "A new Flutter project."
+
+publish_to: 'none'
+
+version: 1.0.0+1
 
 environment:
   sdk: ^3.8.1
@@ -6,12 +11,17 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.1 # For making HTTP requests
-  shared_preferences: ^2.2.3 # For local storage of token
-  provider: ^6.1.2 # For state management
-  go_router: ^15.1.3 # For routing and navigation
-  intl: ^0.20.2 # For date formatting
+  http: ^1.2.1
+  flutter_secure_storage: ^9.2.4
+  provider: ^6.1.2
+  go_router: ^15.1.3
+  intl: ^0.20.2
   flutter_dotenv: ^5.1.0
+  jwt_decoder: ^2.0.1
+  google_sign_in: ^6.2.1
+  google_sign_in_web: ^0.12.4+4
+  google_sign_in_platform_interface: ^2.5.0
+
 
 dev_dependencies:
   flutter_test:
@@ -22,3 +32,4 @@ flutter:
   uses-material-design: true
   assets:
     - .env
+    - assets/google_logo.png
